// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the StretchyView component should render as a background 1`] = `
<View
  onLayout={[Function]}
  pointerEvents="box-none"
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "paddingBottom": 0,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 20,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      StretchyComponent={
        <pure(Component)
          maintainAspectRatio={true}
          overlayColor="white"
          overlayType="featured"
          source={
            Object {
              "uri": "https://picsum.photos/600/600",
            }
          }
          style={
            Object {
              "aspectRatio": 1,
              "width": "100%",
            }
          }
        />
      }
      onLayout={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <RCTScrollView
        Stretchy={[Function]}
        onScroll={[Function]}
        scrollEventThrottle={16}
      >
        <View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              padded={true}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 43,
                  "lineHeight": 49.45,
                  "paddingVertical": 46.44,
                }
              }
            >
              Well hello there!
            </Text>
            <Text
              padded={true}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                  "paddingBottom": 20,
                  "paddingTop": 24,
                }
              }
            >
              Hello there!
              

            </Text>
            <Text
              padded={true}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 24,
                  "lineHeight": 27.6,
                  "paddingBottom": 17.28,
                  "paddingTop": 25.92,
                }
              }
            >
              Hello there!
            </Text>
            <Text
              padded={true}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 43,
                  "lineHeight": 49.45,
                  "paddingVertical": 46.44,
                }
              }
            >
              Try to scroll me around.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`the StretchyView component should render as a header 1`] = `
<View
  onLayout={[Function]}
  pointerEvents="box-none"
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "paddingBottom": 0,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 20,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      StretchyComponent={
        <mapProps(getContext(mapProps(withPropsOnChange(mapProps(ConnectedImage)))))
          source={
            Object {
              "uri": "https://picsum.photos/600/600",
            }
          }
          style={
            Object {
              "aspectRatio": 1,
              "width": "100%",
            }
          }
        />
      }
      onLayout={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <RCTScrollView
        Stretchy={[Function]}
        onScroll={[Function]}
        scrollEventThrottle={16}
      >
        <View>
          <View
            style={
              Object {
                "height": undefined,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Text on top of the stretchy!
            </Text>
          </View>
          <View
            style={
              Object {
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              padded={true}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 43,
                  "lineHeight": 49.45,
                  "paddingVertical": 46.44,
                }
              }
            >
              Well hello there!
            </Text>
            <Text
              padded={true}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                  "paddingBottom": 20,
                  "paddingTop": 24,
                }
              }
            >
              Hello there!
              

            </Text>
            <Text
              padded={true}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 24,
                  "lineHeight": 27.6,
                  "paddingBottom": 17.28,
                  "paddingTop": 25.92,
                }
              }
            >
              Hello there!
            </Text>
            <Text
              padded={true}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 43,
                  "lineHeight": 49.45,
                  "paddingVertical": 46.44,
                }
              }
            >
              Try to scroll me around.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;
